--- a/src/Containers/Login/Login.css
+++ b/src/Containers/Login/Login.css
@@ -10,9 +10,14 @@
 .sendButton{
     height: 2em;
     width: 6em;
+    cursor: pointer;
 
-    background-color: green;
+    background-color: rgb(14, 16, 133);
     color: white;
 
     border-radius: 0.2em;
+}
+.sendButton:hover {
+    transition: 0.4s;
+    background-color: rgb(71, 105, 179);
 }
