--- a/src/Containers/Login/Login.css
+++ b/src/Containers/Login/Login.css
@@ -5,6 +5,7 @@
     background-color: rgb(138, 26, 45);
     justify-content: center;
     align-items: center;
+    height: 30.3em;
 }
 
 .sendButton{
