--- a/src/Containers/Home/Home.css
+++ b/src/Containers/Home/Home.css
@@ -1,7 +1,7 @@
 
 .loader {
     background-color: #262626;
-    height: 35em;
+    height: 30em;
 }
 
 .displayPeliculas {
@@ -11,12 +11,13 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: #262626;
+    padding: 2em 1em 4em 1em;
 }
 
 .peli {
     border-radius : 0.2em;
-    border: 0.1em solid rgb(6, 22, 21);
-    margin: 0.1em;
+    /* border: 0.1em solid rgb(6, 22, 21); */
+    margin: 0.4em;
 }
 
 .cartel {
