--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,7 +1,6 @@
-
-.catalagoPeliculas {
+.footer {
+    height: 3em;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
