--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -2,10 +2,20 @@
 .desingHeader {
     height: 4em;
     background-color: black;
-
     color: black;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    align-items: flex-end;
+    justify-content: center;
+    align-items: center;
+}
+
+#logo{
+    height: 5em;
+    cursor: pointer;
+    justify-content: left;
+    align-items: left;
+}
+
+#menu{
+    display: flex;
 }
