--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,7 +1,7 @@
 
 .desingHeader {
     height: 4em;
-    background-color: black;
+    background-color: #d3d5c3;
     color: black;
     display: flex;
     flex-direction: row;
