--- a/src/Containers/Register/Register.css
+++ b/src/Containers/Register/Register.css
@@ -16,8 +16,8 @@
     height: 1.5em;
     width: 6em;
 
-    background-color: rgb(59, 84, 194);
-    color: white;
+    background-color: #a7a7a7;
+    color: black;
     transition: 0.5s;
 }
 
