--- a/src/Containers/Profile/Profile.css
+++ b/src/Containers/Profile/Profile.css
@@ -24,7 +24,7 @@
 .recuadroperfilInfo{
     height: 20em;
     width: 25em;
-    background-color: rgb(85, 25, 25);
+    background-color: #d3d5c3;
     border-radius: 1.2em;
     cursor: pointer;
     display: flex;
@@ -41,7 +41,7 @@
 
 #logout{
     transition: 0.4s;
-    background-color: #262626;
+    background-color: #a7a7a7;
     transform: scale(1.1);
     height: 2em;
     width: 5em;
@@ -80,7 +80,7 @@
     flex-wrap: wrap;
     height: 20em;
     width: 25em;
-    background-color: rgb(85, 25, 25);
+    background-color: #d3d5c3;
     border-radius: 1.2em;
     cursor: pointer;
     display: flex;
