--- a/src/Containers/Home2/home2.css
+++ b/src/Containers/Home2/home2.css
@@ -1,30 +1,9 @@
 
-.displayHome{
-    background-color: #1f4499 ;
-    width: 100vw;
+.designHome{
+    background-image: linear-gradient( rgb(0 0 0 / 49%), rgb(0 0 0 / 94%) ), url(../../images/fondo1.png);
+    height: 90vh;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-.generalPeliculas{
-    background-color: #1f4499;
-    min-height: 100vh;
-}
-.designPeliculas{
-    background-color: lightblue;
-    width: 30em;
-    border: 0.1em solid #1f4499;
-    border-radius: 0.6em;
-    padding: 1em;
-    margin: 1em;
-
-}
-.tituloPeliculas{
-    background-color: #1f4499
-}
-
-.cartel {
-    height: 15em;
+    flex-direction: column;
+    justify-content: space-around;
+    background-size: cover;
 }
