--- a/src/Containers/Orders/Orders.css
+++ b/src/Containers/Orders/Orders.css
@@ -47,9 +47,8 @@ img.profile-image-films {
 }
 .colum-components-admin-print-pedidos-titles{
     width: 14em;
-    background-color: rgb(255, 255, 255);
+    background-color: #af9f9f;
     height: 100%;
-    padding: 0em 1em;
     border: 1px solid;
     display: flex;
     align-items: center;
@@ -69,7 +68,7 @@ img.profile-image-films {
     padding: 15px 15px ;
     width: 14em;
     margin: 0;
-    background-color: rgb(255, 255, 255);
+    background-color: #d0d0d0;
 }
 .users-registers-title {
     display: flex;
@@ -78,18 +77,20 @@ img.profile-image-films {
 }
 
 p.colum-components-admin-print-register{
-border-top: 1px solid;
+    border-top: 1px solid;
     border-bottom: 1px solid;
     border-left: 0.01px solid;
     border-right: 0.01px solid;
     padding: 15px 15px;
     width: 14em;
     margin: 0;
-    background-color: #262626}
+    background-color: #d0d0d0;
+}
  .last-order-titles {
     display: flex;
     justify-content: center;
-    margin-top: 3em;}
+    margin-top: 3em;
+}
 
 #table-home-print{
     display: flex;
