--- a/src/Containers/Users/Users.css
+++ b/src/Containers/Users/Users.css
@@ -38,7 +38,7 @@ img.profile-image-films {
 }
 .colum-components-admin-print-pedidos{
     width: 14em;
-    background-color:white;
+    background-color:#d3d5c3;
     height: 100%;
     padding: 0em 1em;
     border: 1px solid;
@@ -47,7 +47,7 @@ img.profile-image-films {
 }
 .colum-components-admin-print-pedidos-titles{
     width: 14em;
-    background-color: rgb(255, 255, 255);
+    background-color: #d3d5c3;
     height: 100%;
     padding: 0em 1em;
     border: 1px solid;
@@ -69,7 +69,7 @@ img.profile-image-films {
     padding: 15px 15px ;
     width: 14em;
     margin: 0;
-    background-color: rgb(255, 255, 255);
+    background-color: #d0d0d0;
 }
 .users-registers-title {
     display: flex;
